# serializer version: 1
# name: test_notify_platform[notify.testuser_direct_message_publicuniversalfriend-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'notify',
    'entity_category': None,
    'entity_id': 'notify.testuser_direct_message_publicuniversalfriend',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Direct message: PublicUniversalFriend',
    'platform': 'playstation_network',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <PlaystationNetworkNotify.DIRECT_MESSAGE: 'direct_message'>,
    'unique_id': 'my-psn-id_fren-psn-id_direct_message',
    'unit_of_measurement': None,
  })
# ---
# name: test_notify_platform[notify.testuser_direct_message_publicuniversalfriend-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'testuser Direct message: PublicUniversalFriend',
      'supported_features': <NotifyEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'notify.testuser_direct_message_publicuniversalfriend',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_notify_platform[notify.testuser_group_publicuniversalfriend-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'notify',
    'entity_category': None,
    'entity_id': 'notify.testuser_group_publicuniversalfriend',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Group: PublicUniversalFriend',
    'platform': 'playstation_network',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <PlaystationNetworkNotify.GROUP_MESSAGE: 'group_message'>,
    'unique_id': 'my-psn-id_test-groupid',
    'unit_of_measurement': None,
  })
# ---
# name: test_notify_platform[notify.testuser_group_publicuniversalfriend-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'testuser Group: PublicUniversalFriend',
      'supported_features': <NotifyEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'notify.testuser_group_publicuniversalfriend',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
